--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,6 @@
     <dependencies>
         <!-- common libraries -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.2</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>3.0.0</version>
@@ -50,7 +45,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>18.0</version>
+            <version>27.0-jre</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
