--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
             </plugin>
+            <plugin>
+                <artifactId>maven-help-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
