--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,10 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
+            <!-- NOTE: Use android version for JDK7/Android compatibility -->
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.0-jre</version>
+            <version>27.0-android</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
